--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 	<h1> Made Changes in the local Commit </h1>   
 	<h1> Made Changes in the master!!!</h1>
+	  <h1>Very Good Learning with the GitHub</h1>
  
   </body>
 </html>
