--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<h1> Made Changes in the local Commit </h1>   
 	<h1> Made Changes in the master!!!</h1>
 	  <h1>Very Good Learning with the GitHub</h1>
+	  <h2>Minor Change based on the Pull Request</h2>
  
   </body>
 </html>
